# foldmason

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  benchmark.sh  optimize.py
.github/workflows/: build.yml  docker.yml
data/: CMakeLists.txt  easymsa.sh  main_foldmason.js  vendor_foldmason.js.zst
lib/foldseek/lib/mmseqs/lib/simd/: simd.h
lib/foldseek/lib/mmseqs/src/alignment/: CMakeLists.txt  Fwbw.cpp  Fwbw.h  PSSMCalculator.cpp  PSSMCalculator.h
regression/: run_regression.sh
regression/data/: msa.fasta
regression/regression/: run_easymsa.sh  run_msa2lddt.sh  run_structuremsa.sh
src/: CMakeLists.txt  LocalCommandDeclarations.h  foldmason.cpp
src/commons/: CMakeLists.txt  FMStructureSmithWaterman.cpp  FMStructureSmithWaterman.h  FoldmasonParameters.cpp  FoldmasonParameters.h  LocalParameters.cpp  MSA.cpp  MSA.h  Neighbours.h  SimpleGotoh.cpp  SimpleGotoh.h  StructureSmithWaterman.cpp  StructureSmithWaterman.h  cigar.cpp  cigar.h  newick.cpp  newick.h
src/strucclustutils/: CMakeLists.txt  Fwbw.cpp  Fwbw.h  LoLAlign.cpp  LoLAlign.h  msa2lddt.cpp  msa2lddt.h  refinemsa.cpp  refinemsa.h  structuremsa.cpp  structuremsa.h
src/workflow/: CMakeLists.txt  EasyMSA.cpp
util/: build_osx.sh  foldmason_wrapper.sh  update_foldseek.sh
